objects/QL_Price_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Quote_Line__r.SBQQ__Quote__r.SBQQ__Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Venue_Service_Type__c</fullName>
        <formula>TEXT(Quote_Line__r.SBQQ__Quote__r.SBQQ__Account__r.Venue_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Venue Service Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_Country__c</fullName>
        <formula>TEXT(Quote_Line__r.SBQQ__Quote__r.SBQQ__Opportunity2__r.Bill_To_Address__r.Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill to Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chain_Affiliation__c</fullName>
        <formula>Quote_Line__r.SBQQ__Quote__r.SBQQ__Account__r.Chain_Affiliation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chain Affiliation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chain_MSA_Code__c</fullName>
        <formula>Quote_Line__r.SBQQ__Quote__r.SBQQ__Opportunity2__r.MSA_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chain MSA Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <formula>Quote_Line__r.SBQQ__Quote__r.Opportunity_Close_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Crowd_Compass_Total_of_Events__c</fullName>
        <formula>IF( CONTAINS(Quote_Line__r.SBQQ__ProductCode__c, 'CV-SW-EC-CC-CCMBAP'), Quote_Line__r.Discount_schedule_Quantity__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Crowd Compass Total # of Events</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency_Conversion_Rate__c</fullName>
        <formula>Quote_Line__r.Conversion_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency Conversion Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Year__c</fullName>
        <formula>Quote_Line__r.term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delta__c</fullName>
        <formula>PriceAfter__c-PriceBefore__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delta</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Effective_Quantity__c</fullName>
        <formula>Quote_Line__r.SBQQ__EffectiveQuantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Vertical__c</fullName>
        <formula>Quote_Line__r.SBQQ__Quote__r.Event_Vertical__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Vertical</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Contract_Term__c</fullName>
        <formula>VALUE(TEXT(Quote_Line__r.SBQQ__Quote__r.Contract_Term_Years__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Contract Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Included_in_Batch_AW__c</fullName>
        <formula>Quote_Line__r.SBQQ__Quote__r.Included_in_Primary_Batch_AW__c</formula>
        <label>Included in Batch AW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <formula>TEXT(Quote_Line__r.SBQQ__Quote__r.SBQQ__Opportunity2__r.LeadSource)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <formula>Quote_Line__r.SBQQ__ListPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Price__c</fullName>
        <label>Max Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Price__c</fullName>
        <label>Min Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Price__c</fullName>
        <formula>Quote_Line__r.SBQQ__NetPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oportunity_Owner__c</fullName>
        <formula>Quote_Line__r.SBQQ__Quote__r.SBQQ__Opportunity2__r.Owner.FirstName + ' ' +  Quote_Line__r.SBQQ__Quote__r.SBQQ__Opportunity2__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <formula>Quote_Line__r.SBQQ__Quote__r.Opportunity_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Role__c</fullName>
        <formula>Quote_Line__r.SBQQ__Quote__r.SBQQ__Opportunity2__r.Opp_Owner_Role__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <formula>Quote_Line__r.SBQQ__Quote__r.SBQQ__Opportunity2__r.Opportunity_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Price__c</fullName>
        <formula>Quote_Line__r.SBQQ__OriginalPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriceAfter__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Price After</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriceBefore__c</fullName>
        <label>Price Before</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriceRuleName__c</fullName>
        <label>Price Action Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Action_Category__c</fullName>
        <formula>IF(PriceRuleName__c=='Event Quantity Uplift/Discount', 'Volume',
IF(PriceRuleName__c=='Reg Contract Term Uplift/Discount', 'Term',
IF(PriceRuleName__c=='GANE Discount', 'Segment',
IF(PriceRuleName__c=='Express Discount' || PriceRuleName__c=='Passkey-Citywide License CVENT Discount', 'Segment',
IF(PriceRuleName__c=='Geographic Region Discount', 'Geography',
IF(PriceRuleName__c=='Reg Floor Validation' || PriceRuleName__c=='Floor Price Validation' || PriceRuleName__c=='List Price ONLY' || PriceRuleName__c=='App Build Plus Pricing' || PriceRuleName__c=='Geo Targeting Premium' , 'Other',
IF(PriceRuleName__c=='Crowd Compass Term Discount' || PriceRuleName__c=='City wide RN Term Discount/Uplift', 'Term',
IF(PriceRuleName__c=='Crowd Compass Volume Discount', 'Volume',
IF(PriceRuleName__c=='OA Volume Discount' || PriceRuleName__c=='Volume (Range) Discount' || PriceRuleName__c=='Volume (Block) Discount', 'Volume',
IF(PriceRuleName__c=='CSN-P Multi Year Discount', 'Term',
IF(PriceRuleName__c=='CSN-P Room night/RFP Discount', 'Volume','')))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price Action Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Quote_Line__r.SBQQ__ProductCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>Quote_Line__r.SBQQ__ProductFamily__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <formula>Quote_Line__r.Product_Line2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>Quote_Line__r.SBQQ__Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prorate_Multiplier__c</fullName>
        <formula>Quote_Line__r.SBQQ__ProrateMultiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prorate Multiplier</label>
        <precision>18</precision>
        <scale>16</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <formula>Quote_Line__r.SBQQ__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Line_Currency__c</fullName>
        <formula>TEXT(Quote_Line__r.CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Line Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipName>QL_Price_Rule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Type__c</fullName>
        <formula>TEXT(Quote_Line__r.SBQQ__Quote__r.SBQQ__Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipName>QL_Price_Rule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rack_Rate__c</fullName>
        <formula>Quote_Line__r.Rack_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rack Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Regular_Price__c</fullName>
        <formula>Quote_Line__r.SBQQ__RegularPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regular Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sellable_City_Ranking__c</fullName>
        <formula>TEXT(Quote_Line__r.SBQQ__Quote__r.SBQQ__Account__r.Sellable_City_Ranking__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sellable City Ranking</label>
        <type>Text</type>
    </fields>
    <label>Pricing Analytics</label>
    <nameField>
        <displayFormat>PA-{00000}</displayFormat>
        <label>QL Price Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Analytics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>